<resources>
    <string name="app_name">BMILearningProject</string>
    <string name="background_splash">Background Splash</string>
    <string name="logo">logo</string>
    <string name="health_is_the_real_wealth">Health is the real wealth.</string>
    <string name="what_is_your_height">What is Your Height ?</string>
    <string name="height_helps_personalize_workouts_and_trackfitness_progress_accurately">Height helps personalize workouts and \ntrackfitness progress accurately</string>
    <string name="cm">cm</string>
    <string name="ft">ft</string>
    <string name="_5_7">5.7</string>
    <string name="next">Next</string>
    <string name="knowing_your_weight_helps_us_tailor_workouts_track_progress_better"><![CDATA[Knowing your weight helps us tailor \n workouts & track progress better]]></string>
    <string name="what_is_your_weight">What is Your Weight ?</string>
    <string name="kg">kg</string>
    <string name="libs">libs</string>
    <string name="back_icon">Back Icon</string>
    <string name="what_is_your_age">What is your age?</string>
    <string name="knowing_your_age_helps_us_tailor_n_workouts_track_progress_better"><![CDATA[Knowing your age helps us tailor \n workouts & track progress better]]></string>
    <string name="_25">25</string>
    <string name="y">y</string>
    <string name="select_your_gender">Select your gender?</string>
    <string name="knowing_your_gender_helps_us_tailor_n_workouts_track_progress_better"><![CDATA[Knowing your gender helps us tailor \n workouts & track progress better]]></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="_34">34</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="_20">20</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="our_ratting">Our Ratting</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_apps">More Apps</string>
    <string name="item_name">Item Name</string>
    <string name="dashboard">Dashboard</string>
    <string name="blog">Blog</string>
    <string name="bmr">BMR</string>
    <string name="this_is_main_heading">This is main heading</string>
    <string name="we_are_working_on_design_layout">We are working on design layout</string>
    <string name="_4_min">4 min</string>
    <string name="see_more">see more</string>
    <string name="see_more_icon">see more icon</string>
    <string name="blog_post_details">Blog Post Details</string>
    <string name="the_standard_lorem_ipsum_passage_has_been_a_printer_s_friend_for_centuries_like_stock_photos_today_it_served_as_a_placeholder_for_actual_content_the_original_text_comes_from_cicero_s_philosophical_work_written_in_45_bc">The standard lorem ipsum passage has been a printer\'s friend for centuries. Like stock photos today, it served as a placeholder for actual content. The original text comes from Cicero\'s philosophical work written in 45 BC.</string>
    <string name="result">Result</string>
    <string name="lbs">lbs</string>
</resources>