<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgeAct">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_splash"
        android:src="@drawable/splash_bg"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.example.bmilearningproject.util.MyScaleView
        android:id="@+id/scaleView"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_190sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subHeading"
        app:layout_constraintBottom_toTopOf="@id/nextBtn"
        app:layout_constraintStart_toEndOf="@id/subHeading"
        android:background="@color/white"
        app:layout_constraintHorizontal_bias="0.7"

        />
    <ImageView
        android:id="@+id/backIc"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:contentDescription="@string/back_icon"
        android:src="@drawable/back_icon"
        android:scaleType="fitXY"
        android:elevation="2dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintVertical_bias="0.05"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:id="@+id/heading"
        android:text="@string/what_is_your_age"
        android:textColor="@color/common_color"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/subHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/knowing_your_age_helps_us_tailor_n_workouts_track_progress_better"
        android:textColor="@color/common_color_light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/heading"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintEnd_toEndOf="@id/heading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"
        android:gravity="center"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/unitValue"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/heading"
        app:layout_constraintEnd_toEndOf="@id/heading"
        app:layout_constraintTop_toBottomOf="@id/heading"
        >

        <TextView
            android:id="@+id/ageValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/outfit_extrabold"
            android:text="@string/_25"
            android:textColor="@color/common_color"
            android:textSize="64sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/weightUnit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/y"

            android:textColor="@color/common_color_light"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@id/ageValue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/nextBtn"
        style="@style/CommonButtonStyle"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unitValue"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintStart_toStartOf="@id/heading"
        app:layout_constraintEnd_toEndOf="@id/heading"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>