<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlogPostDetailAct"
    tools:ignore="ExtraText">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_splash"
        android:src="@drawable/splash_bg"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <ImageView
        android:id="@+id/backIc"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:contentDescription="@string/back_icon"
        android:src="@drawable/back_icon"
        android:scaleType="fitXY"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintVertical_bias="0.05"
        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blog_post_details"
        app:layout_constraintTop_toTopOf="@id/backIc"
        app:layout_constraintBottom_toBottomOf="@id/backIc"
        app:layout_constraintStart_toEndOf="@id/backIc"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textColor="@color/common_color"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/poppins_semibold"
        />
    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/femal_ava_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backIc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:scaleType="fitXY"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_min"
        android:textColor="@color/common_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/poppins"
        />
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_min"
        android:textColor="@color/common_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/poppins"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        >
        <TextView
            android:id="@+id/des"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/the_standard_lorem_ipsum_passage_has_been_a_printer_s_friend_for_centuries_like_stock_photos_today_it_served_as_a_placeholder_for_actual_content_the_original_text_comes_from_cicero_s_philosophical_work_written_in_45_bc"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/poppins"
            android:layout_marginStart="@dimen/_10sdp"
            />

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>